tests/invalid/generated_binop_div_int_str/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: int = 1
    y: str = "hello"
    z = x / y
